--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
         <activity
             android:name=".Portada"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
