--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -14,16 +14,14 @@
         tools:targetApi="31">
         <activity
             android:name=".MovementsPicker"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:exported="false">
             >
             <meta-data
                 android:name="android.app.lib_name"
@@ -31,8 +29,7 @@
         </activity>
         <activity
             android:name=".Portada"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
