--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.PokemonShowdown"
         tools:targetApi="31">
         <activity
+            android:name=".Combat"
+            android:exported="false"
+            android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MovementsPicker"
             android:exported="false">
             <meta-data
