--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -22,22 +22,25 @@
         </activity>
         <activity
             android:name=".MovementsPicker"
-            android:exported="false">
+            android:exported="false"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-            >
+            android:exported="false"
+            android:screenOrientation="portrait">
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".Portada"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
