--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,11 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokemonShowdown"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".Combat"
+            android:name=".Battle"
             android:exported="false"
-            android:screenOrientation="landscape">
+            android:label="@string/title_activity_battle"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.PokemonShowdown.NoActionBar" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -23,7 +25,7 @@
         <activity
             android:name=".MovementsPicker"
             android:exported="false"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -31,8 +33,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -40,7 +41,7 @@
         <activity
             android:name=".Portada"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
