--- a/PokemonShowdown/app/src/main/AndroidManifest.xml
+++ b/PokemonShowdown/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokemonShowdown"
-        tools:targetApi="31" >
+        tools:targetApi="31"
+        >
         <activity
             android:name=".Battle"
             android:exported="false"
@@ -52,6 +53,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <service
+            android:name=".MusicService"
+            android:enabled="true" />
     </application>
+
 
 </manifest>
